--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
-spring.profiles.active=test
+spring.profiles.active=${APP_PROFILE:test}
 spring.jpa.open-in-view=false
+security.oauth2.client.client-id=${CLIENT_ID:iwcatalog}
+security.oauth2.client.client-secret=${CLIENT_SECRET:iwcatalog123}
+jwt.secret=${JWT_SECRET:MY-JWT-SECRET}
+jwt.duration=${JWT_DURATION:86400}
